optimize code minor fixes added sensor fields indoorHumidity is optional